--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "parcel build index.html"
   },
   "keywords": [],
-  "author": "",
+  "author": "HDRP0720",
   "license": "ISC",
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
